--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+input,
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+    background-color: transparent!important;
+}
+
+input,
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+    -webkit-box-shadow: 0 0 0 30px white inset;
+}
