--- a/frontend/src/components/ui/day-picker.css
+++ b/frontend/src/components/ui/day-picker.css
@@ -4,10 +4,16 @@
   font-family: "Noto Sans";
   font-size: 1.2rem !important;
   transform: translate(20px,-2px);
+  text-align: center;
+}
+.rdp-caption {
+  justify-content: center !important;
+  text-align: center !important;
 }
 /* calendar navigation button */
 .rdp-nav{
   width:40px;
+  transform: translate(63px);
 }
 .rdp-nav_button_previous{
   transform:translateX(-278px)
